--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,11 @@ cache:
     - flow-typed
     - $HOME/.cache/electron
     - $HOME/.cache/electron-builder
-
+sudo: required
+services:
+  - docker
 before_install:
+  - docker run --name mariadb -e MYSQL_ROOT_PASSWORD=my-secret-pw -d mariadb
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX="g++-8"; fi
 
 install:
