--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,8 +28,10 @@ install:
   - ps: Install-Product node $env:nodejs_version x64
   - set CI=true
   - yarn
+  - docker version
 
 test_script:
+  - docker run --name mariadb -e MYSQL_ROOT_PASSWORD=my-secret-pw -d mariadb
   - yarn package-ci
   - yarn lint
   # - yarn flow
