remove e2e from travis & appveyor

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,6 @@ matrix:
       language: node_js
       node_js:
         - node
-      addons:
-        homebrew:
-          packages:
-            - docker
-            - docker-machine
-            - virtualbox
       env:
         - ELECTRON_CACHE=$HOME/.cache/electron
         - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
@@ -55,9 +49,6 @@ cache:
     - $HOME/.cache/electron-builder
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then docker-machine create --driver virtualbox default; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then eval "$(docker-machine env default)"; fi
-  - docker run --name mariadb -e MYSQL_ROOT_PASSWORD=my-secret-pw -d mariadb
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export CXX="g++-8"; fi
 
 install:
@@ -89,5 +80,5 @@ script:
   - yarn flow
   # HACK: Temporarily ignore `yarn test` on linux
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then yarn test; fi
-  - yarn build-e2e
-  - yarn test-e2e
+  # - yarn build-e2e
+  # - yarn test-e2e
