--- a/package.json
+++ b/package.json
@@ -232,7 +232,7 @@
     "testcafe-react-selectors": "^3.1.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.0",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
@@ -246,7 +246,10 @@
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
+    "fstream": "^1.0.12",
+    "handlebars": "^4.1.0",
     "history": "^4.7.2",
+    "js-yaml": "^3.13.1",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "react-hot-loader": "^4.8.2",
